# pinksundew

./: .cursorrules  .gitignore  .mcp.json  AGENTS.md  Cargo.toml  README.md  antigravity.md  check_rls.js  dist-workspace.toml  eslint.config.mjs  instrumentation-client.ts  next.config.ts  package-lock.json  package.json  posthog-setup-report.md  release-plz.toml  sst.config.ts  tsconfig.json  vitest.config.ts
.cursor/: mcp.json
.cursor/rules/: pinksundew-global.mdc  pinksundew-instruction-1.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml  mcp-release.yml  mcp-rust-ci.yml  publish-mcp.yml  release-mcp-rust.yml  release-plz.yml  release.yml
docs/: onboarding-tutorial-plan.md
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
mcp-server-rust/: CHANGELOG.md  Cargo.toml  README.md  antigravity.md  dist-workspace.toml
mcp-server-rust/src/: arg_parse.rs  bridge.rs  cli.rs  config.rs  formatters.rs  main.rs  models.rs  panic_guard.rs  resources.rs  server.rs  sync.rs  tools.rs  update.rs
mcp-server-rust/tests/: stdio_smoke.rs  stdout_safety.rs
mcp-server/scripts/: verify-wrapper.mjs
mcp-server/src/: formatters.ts  index.ts  project-scope.ts  resources.ts  schemas.ts  supabase.ts  sync.ts  tools.ts  types.ts
scripts/: clean-next-artifacts.mjs  clean-opennext-output.mjs
src/: proxy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: api-key-manager.tsx  project-tabs.tsx
src/lib/: anon-limits.ts  anon-merge-client.ts  anon-merge.ts  bridge-access.ts  bridge-auth.ts  global-overlay.ts  markdown-caret.ts  (+1 more)
(+138 files in other folders)
