[package]
name = "pinksundew-mcp"
version = "2.1.2"
edition = "2021"
description = "Pink Sundew MCP server (Rust runtime)"
license = "MIT"
repository = "https://github.com/qadolphe/AgentPlanner"
homepage = "https://pinksundew.com"

[[bin]]
name = "pinksundew-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "1.4.0", features = ["server", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
urlencoding = "2.1"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.13"

[package.metadata.dist]
dist = true
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]

[lints.clippy]
print_stdout = "deny"
print_stderr = "allow"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
